--- a/composer.json
+++ b/composer.json
@@ -3,12 +3,15 @@
         "psr-4": {"App\\": "src/"}
     },
     "require-dev": {
+        "php": ">=8.1",
         "filp/whoops": "^2.14",
         "squizlabs/php_codesniffer": "^3.6",
         "phpstan/phpstan": "^1.2"
     },
     "require": {
         "twig/twig": "^3.3",
-        "symfony/swiftmailer-bundle": "^3.5"
+        "symfony/swiftmailer-bundle": "^3.5",
+        "doctrine/annotations": "^1.13",
+        "ext-pdo": "*"
     }
 }
